minore refactoring
